# maestro

./: .gitignore  .mcp.json.example  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
claude-maestro/: CommitDetailPanel.swift  ContentView.swift  GitManager.swift  MarketplaceManager.swift  MarketplaceSection.swift  PluginModels.swift  SidebarView.swift  SkillManager.swift  TerminalView.swift
maestro-mcp-server/: package-lock.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs  update.rs
src-tauri/src/core/: process_manager.rs
src/components/sidebar/: Sidebar.tsx  UpdateSettingsSection.tsx
src/components/terminal/: PreLaunchCard.tsx  TerminalGrid.tsx  TerminalView.tsx
src/components/update/: UpdateNotification.tsx
src/lib/: terminal.ts
src/stores/: useSessionStore.ts  useUpdateStore.ts
tauri-maestro/: README.md
tauri-maestro/src/: App.tsx
tauri-maestro/src-tauri/: Cargo.toml
tauri-maestro/src-tauri/src/: commands.rs  lib.rs  pty.rs  url_detection.rs
tauri-maestro/src-tauri/src/commands/: mcp.rs  session.rs
tauri-maestro/src-tauri/src/core/: mcp_config_writer.rs  mcp_status_monitor.rs  mod.rs
tauri-maestro/src-tauri/src/git/: ops.rs
tauri-maestro/src-tauri/src/process/: managed.rs  mod.rs  registry.rs
tauri-maestro/src-tauri/src/session/: events.rs  manager.rs  mod.rs  persistence.rs  types.rs
tauri-maestro/src/components/: Terminal.tsx
tauri-maestro/src/hooks/: index.ts  useSession.ts  (+5 more)
(+17 files in other folders)
