[package]
name = "tauri-maestro"
version = "2.0.0"
edition = "2021"

[lib]
name = "tauri_maestro_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "sync"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
dirs = "5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.18"
regex = "1.10"
thiserror = "1.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
  "Win32_System_Threading",
  "Win32_System_JobObjects",
  "Win32_Foundation"
] }
